Add .gitignore_global and move .DS_Store ignore there

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
 	email = avery.garmaise@unity3d.com
 [core]
 	pager = less -F -X
+	excludesfile = ~/.gitignore_global
 [diff]
     tool = vimdiff
     guitool = webstorm
