Updated iterm2 settings

--- a/.config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2/settings/com.googlecode.iterm2.plist
@@ -4,8 +4,14 @@
 <dict>
 	<key>AllowClipboardAccess</key>
 	<true/>
+	<key>BracketedPasteMode</key>
+	<true/>
+	<key>ConvertDosNewlines</key>
+	<true/>
 	<key>Default Bookmark Guid</key>
 	<string>1401150C-23DD-44FB-BFC5-C9DCDDBA2E0F</string>
+	<key>EscapeShellCharsWithBackslash</key>
+	<false/>
 	<key>HapticFeedbackForEsc</key>
 	<false/>
 	<key>HideTab</key>
@@ -2835,6 +2841,12 @@
 	</array>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>2</integer>
+	<key>PasteSpecialRegex</key>
+	<string></string>
+	<key>PasteSpecialSubstitution</key>
+	<string></string>
+	<key>PasteSpecialUseRegexSubstitution</key>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
