--- a/.config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2/settings/com.googlecode.iterm2.plist
@@ -2321,7 +2321,7 @@
 	<key>Print In Black And White</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>TabStyleWithAutomaticOption</key>
