Add nvim config

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 !/.config/iterm2
 /.config/iterm2/*
 !/.config/iterm2/settings
+!/.config/nvim
 !/.config/oh-my-zsh
 !/.config/tmuxinator
 !.tmux.conf
