Update iterm2 settings not to block shutdown

--- a/.config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2/settings/com.googlecode.iterm2.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>HotkeyModifiers</key>
 	<integer>524288</integer>
+	<key>NeverBlockSystemShutdown</key>
+	<true/>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -2321,7 +2323,7 @@
 	<key>Print In Black And White</key>
 	<true/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>TabStyleWithAutomaticOption</key>
