Update tmuxinator configs to pull before running locally

--- a/.config/tmuxinator/usd.yml
+++ b/.config/tmuxinator/usd.yml
@@ -45,5 +45,5 @@ on_project_exit: tmux -CC attach -t usd
 attach: false
 
 windows:
-  - dashboard: yarnia
+  - dashboard: git pull; yarnia
   - dev1: git status
