--- a/.config/tmuxinator/usdr.yml
+++ b/.config/tmuxinator/usdr.yml
@@ -45,5 +45,5 @@ root: ~/Projects/unity-services-dashboard
 attach: true
 
 windows:
-  - dashboard: yarnia
+  - dashboard: git pull; yarnia
   - dev1: git status
