Update iterm2 settings

--- a/.config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2/settings/com.googlecode.iterm2.plist
@@ -2279,6 +2279,8 @@
 			<string>/Users/avery.garmaise</string>
 		</dict>
 	</array>
+	<key>OnlyWhenMoreTabs</key>
+	<false/>
 	<key>OpenTmuxWindowsIn</key>
 	<integer>2</integer>
 	<key>PasteSpecialRegex</key>
