--- a/.config/tmuxinator/usd.yml
+++ b/.config/tmuxinator/usd.yml
@@ -27,7 +27,7 @@ on_project_exit: tmux -CC attach -t usd
 # on_project_stop: command
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-# pre_window: rbenv shell 2.0.0-p247
+pre_window: nvm use
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
