--- a/.config/iterm2/settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2/settings/com.googlecode.iterm2.plist
@@ -2356,5 +2356,7 @@
 	<false/>
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
+	<key>metalMaximizeThroughput</key>
+	<true/>
 </dict>
 </plist>
