--- a/.todo.cfg
+++ b/.todo.cfg
@@ -51,28 +51,29 @@ export TODO_ACTIONS_DIR="$HOME/.todo.actions.d"
 # Priorities can be any upper-case letter.
 # A,B,C are highlighted; you can add coloring for more.
 #
-# export PRI_A=$YELLOW        # color for A priority
-# export PRI_B=$GREEN         # color for B priority
-# export PRI_C=$LIGHT_BLUE    # color for C priority
-# export PRI_D=...            # define your own
-# export PRI_X=$WHITE         # color unless explicitly defined
+export PRI_A=$YELLOW         # color for A priority
+export PRI_B=$LIGHT_GREEN    # color for B priority
+export PRI_C=$LIGHT_CYAN     # color for C priority
+export PRI_D=$LIGHT_BLUE     # define your own
+export PRI_E=$LIGHT_PURPLE
+export PRI_X=$WHITE          # color unless explicitly defined
 
 # There is highlighting for tasks that have been done,
 # but haven't been archived yet.
 #
-# export COLOR_DONE=$LIGHT_GREY
+export COLOR_DONE=$LIGHT_GREY
 
 # There is highlighting for projects, contexts, dates, and item numbers.
 #
-# export COLOR_PROJECT=$RED
-# export COLOR_CONTEXT=$RED
-# export COLOR_DATE=$BLUE
-# export COLOR_NUMBER=$LIGHT_GREY
+export COLOR_PROJECT=$RED
+export COLOR_CONTEXT=$RED
+export COLOR_DATE=$BLUE
+export COLOR_NUMBER=$LIGHT_GREY
 
 # There is highlighting for metadata key:value pairs e.g.
 # DUE:2006-08-01 or note:MYNOTE
 #
-# export COLOR_META=$CYAN
+export COLOR_META=$CYAN
 
 # === BEHAVIOR ===
 
