--- a/.todo.cfg
+++ b/.todo.cfg
@@ -65,7 +65,7 @@ export COLOR_DONE=$LIGHT_GREY
 
 # There is highlighting for projects, contexts, dates, and item numbers.
 #
-export COLOR_PROJECT=$RED
+export COLOR_PROJECT=$GREEN
 export COLOR_CONTEXT=$RED
 export COLOR_DATE=$BLUE
 export COLOR_NUMBER=$LIGHT_GREY
